--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* the linear-gradient thing provides the color fade across the background. yay. */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(89deg, #5D8232 0%, #4c6c7d 100%);
 }
 
 code {
